--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -956,7 +956,7 @@ input:-webkit-autofill:active{
     background-image: linear-gradient(to bottom right, rgb(11, 11, 11), rgb(2, 5, 8));
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     height: auto;
-    margin-top: 25vh;
+    margin-top: 40px;
 }
 
 .corpoFiller {
